//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  posts Post [not null]
  comments Comment [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Post {
  id String [pk]
  title String [not null]
  content String [not null]
  author User
  authorEmail String
  createdAt DateTime [default: `now()`, not null]
  comments Comment [not null]
}

Table Comment {
  id String [pk]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
  author User
  authorEmail String
  Post Post
  postId String
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Post.authorEmail > User.email

Ref: Comment.authorEmail > User.email

Ref: Comment.postId > Post.id